--- a/DevamLogin.css
+++ b/DevamLogin.css
@@ -1,7 +1,7 @@
 body{
 	margin:0;
 	color:#6a6f8c;
-	background: #8DE4AF;;
+	background: #C39482;;
 	font:600 16px/18px 'Open Sans',sans-serif;
 }
 *,:after,:before{box-sizing:border-box}
@@ -16,14 +16,14 @@ a{color:inherit;text-decoration:none}
 	min-height:670px;
 	position:relative;
 	background:url(https://www.britannica.com/science/flower) no-repeat center;
-	box-shadow:0 12px 15px 0 #4887B0,0 17px 50px 0 #4887B0;
+	box-shadow:0 12px 15px 0 #C39482,0 17px 50px 0 #C39482;
 }
 .login-html{
 	width:100%;
 	height:100%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
-	background:#4887B0;
+	background:#C39482;
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -57,7 +57,7 @@ a{color:inherit;text-decoration:none}
 .login-html .sign-in:checked + .tab,
 .login-html .sign-up:checked + .tab{
 	color:#fff;
-	border-color: #8DE4AF;;
+	border-color: #C39482;;
 }
 .login-form{
 	min-height:345px;
